# evo-wifi

./: Cargo.toml  README.md
crates/evo-wifi-cli/: Cargo.toml
crates/evo-wifi-core/: Cargo.toml
crates/evo-wifi-nu-plugin/: Cargo.toml
crates/evo-wifi-nu-plugin/src/: lib.rs  main.rs  values.rs
crates/evo-wifi-nu-plugin/src/commands/: common.rs  connect.rs  disconnect.rs  forget.rs  mod.rs  networks.rs  status.rs
crates/evo-wifi-provider-linux-wpa/: Cargo.toml
crates/evo-wifi-provider-nushell/: Cargo.toml
crates/evo-wifi-provider-terminal/: Cargo.toml
documents/: conversacion.md
src/: lib.rs  main.rs
src/agents/: mod.rs  wifi_connection_disconnector.rs  wifi_current_connection_password_shower.rs  wifi_network_connector.rs  wifi_network_switcher.rs  wifi_new_network_connector.rs  wifi_saved_network_forgetter.rs
src/borrowed/: mod.rs  wifi_action_selection_input.rs  wifi_connection_status.rs  wifi_interface.rs  wifi_network.rs  wifi_saved_network.rs  wifi_saved_secret.rs
src/borrowed_data/: mod.rs
src/commands/: mod.rs  wifi_network_switch_command.rs
src/contracts/: mod.rs  presentation.rs  system_wifi.rs
src/providers/: mod.rs
src/resolvers/: mod.rs  wifi_already_connected_network_resolver.rs  wifi_connect_resolver.rs  wifi_connection_disconnect_resolver.rs  wifi_connection_status_resolver.rs  wifi_disconnect_message_resolver.rs  wifi_forget_resolver.rs  wifi_interface_resolver.rs  wifi_network_selection_input_resolver.rs  wifi_network_switch_resolver.rs  wifi_new_network_connect_resolver.rs  wifi_password_input_resolver.rs  (+3 more)
(+200 files in other folders)
